AQCU-1172: data picker z-index fix

--- a/src/main/webapp/css/aqcu.css
+++ b/src/main/webapp/css/aqcu.css
@@ -1,3 +1,7 @@
+.dropdown-menu{
+    z-index:1060;
+}
+
 #aqcu-ui-content {
 	padding-top: 40px;
 	min-height: 600px;
